SMSV-32 Fixed spacing of inputs in modal

--- a/frontend/static/css/common.css
+++ b/frontend/static/css/common.css
@@ -440,13 +440,13 @@ div.base-form button:hover {
 }
 
 .modal section {
+    padding-top: 20px;
+    padding-bottom: 20px;
     width: 100%;
-    height: 90%;
     overflow-y: auto;
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin: 0;
 }
 
 .modal .flash-message {
@@ -462,19 +462,19 @@ div.base-form button:hover {
     margin: 0;
 }
 
-.modal input {
+.modal section > input {
     width: 75%;
     height: 50px;
     padding: 15px;
-    margin-bottom: 20px;
+    margin-top: 20px;
     border-radius: 5px;
     border-width: 1px;
     font-family: var(--paragraph-font-family);
     font-size: var(--paragraph-font-size);
 }
 
-.modal input:first-child {
-    margin-top: 20px;
+.modal section > input:first-of-type {
+    margin-top: 0;
 }
 
 .modal footer {
